--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Master.css">
+    <link rel="stylesheet" href="css/index.html">
     <link rel="stylesheet" href="css/index.css" type= 'text' />
     <title>Happy Birthday!</title>
     <style>
